Added documentation and examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ requires-python = ">=3.8,<4"
 # ADD NEW DEPENDENCIES HERE
 dependencies = [
     "autora-core",
-    "scikit-learn",
+    "typing",
+    "numpy",
 ]
 
 [project.optional-dependencies]
